# Trustgig

./: .env.example  Makefile  README.md  create_tables.py  download_model.py  fix_corrupted_skills.py  migrate.py  mkdocs.yml  pyproject.toml  requirements.txt  seed_data.py  setup.cfg  test_at_sandbox.py  test_embedder.py  test_endpoint_local.py  test_sms_pure.py  test_sms_raw.py  tests.py  trustgig.db  wipe_production_db.py
ai_routes/: AI_trust_report.py
backend/: applications.py  crud.py  escrow.py  index.html  jobs.py  main.py  models.py  notifications.py  schemas.py  seed_data.py  sms_service.py  trust_gig.html  users.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/ai_routes/: __init__.py  ai_features.py
backend/app/services/: matcher_client.py  sms_service.py
data/raw/: Db_creation.sql  data_gen.sql
docs/: index.md
frontend/: index.html
trustgig/: Ml.md  __init__.py  database.py  dataset.py  embedder.py  features.py  main.py  matcher.py  models.py  notifier.py  plots.py  scorer.py  vectorizer.py
trustgig/modeling/: predict.py  train.py
